# c3fatec.github.io

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: linter.yml
banco/: __init__.py  admin.py  auth.py  banco.py  db.py  schema.sql
banco/static/: style.css
banco/static/css/: _agencia.scss  _attdados.scss  _baseinterna.scss  _cadastro.scss  _fechamento.scss  _gerente.scss  _home.scss  _impressao.scss  _login.scss  _pendencia.scss  _pendencias.scss  _principal.scss  _saque.scss  _saquedeposito.scss  _taxas.scss  _transacoes.scss  _usuario.scss  style.css  style.css.map  style.scss
banco/static/js/: script.js
banco/templates/: aprovacaocadastros.html  atualizacaodados.html  baseinterna.html  cadastros.html  comprovantes.html  dados.html  deposito.html  extrato.html  impressao.html  index.html  loginadm.html  pendencias.html  principal.html  saque.html  saque.tml
banco/templates/adm/: agencia.html  aprovacaocadastros.html  atualizacaoAgencia.html  atualizacaoGerentes.html  atualizacaocadastro.html  atualizaragencia.html  atualizargerente.html  cadastroGerentes.html  cadastrocliente.html  capitalinicial.html  gerente.html  pendencias.html  taxas.html  transacoes.html  usuarios.html
banco/templates/auth/: aguarde.html  cadastro.html  cadastro2.html  login.html  loginadmin.html
banco/templates/cliente/: deposito.html  extrato.html  fechamento.html  home.html  impressao.html  saque.html  transferencia.html
templates/: cadastro.html  index.html  login.html  main.html  principal.html
