[tool.poetry]
name = "c3fatec-github-io"
version = "0.1.0"
description = ""
authors = ["Gabriel Santos <dosantos.ogabriel@gmail.com>"]
readme = "README.md"
packages = [{include = "banco"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "22.1.0"
black = "22.8.0"
CacheControl = "0.12.11"
cachy = "0.3.0"
certifi = "2022.6.15.1"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
cleo = "1.0.0a5"
click = "8.1.3"
crashtest = "0.3.1"
distlib = "0.3.6"
dulwich = "0.20.46"
filelock = "3.8.0"
Flask = "2.2.2"
html5lib = "1.1"
idna = "3.3"
itsdangerous = "2.1.2"
"jaraco.classes" = "3.2.2"
Jinja2 = "3.1.2"
jsonschema = "4.16.0"
keyring = "23.9.1"
lockfile = "0.12.2"
MarkupSafe = "2.1.1"
more-itertools = "8.14.0"
msgpack = "1.0.4"
mypy-extensions = "0.4.3"
mysqlclient = "2.1.1"
packaging = "21.3"
pathspec = "0.10.1"
pexpect = "4.8.0"
pkginfo = "1.8.3"
platformdirs = "2.5.2"
poetry-core = "1.1.0"
poetry-plugin-export = "1.0.6"
protobuf = "3.20.1"
ptyprocess = "0.7.0"
pycparser = "2.21"
pylev = "1.4.0"
PyMySQL = "1.0.2"
pyparsing = "3.0.9"
pyrsistent = "0.18.1"
python-dotenv = "0.21.0"
requests = "2.28.1"
requests-toolbelt = "0.9.1"
shellingham = "1.5.0"
six = "1.16.0"
tomli = "2.0.1"
tomlkit = "0.11.4"
urllib3 = "1.26.12"
virtualenv = "20.16.5"
webencodings = "0.5.1"
Werkzeug = "2.2.2"
xattr = "0.9.9"
poetry = "1.2.0"
pyScss = "1.4.0"
APScheduler = "^3.9.1.post1"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
